[tool.poetry]
name = "yearn-treasury"
version = "0.0.1"
description = ""
authors = ["Bob The Buidler <you@example.com>"]
packages = [{ include = "yearn_treasury/*" }]

[build-system]
requires = ["setuptools", "wheel", "mypy[mypyc]", "tomli>=2.0.0; python_version < '3.11'"]
build-backend = "setuptools.build_meta"

[tool.poetry.scripts]
balances = "yearn_treasury.balances:export"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
eth-portfolio-temp = ">=0.0.1,<0.1"

[tool.poetry.group.dev.dependencies]
mypy = "*"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hypothesis
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | cache
  | dist
  | env
)/
'''