[tool.poetry]
name = "yearn-treasury"
version = "0.0.1"
description = ""
authors = ["Bob The Buidler <you@example.com>"]
packages = [{ include = "yearn_treasury/*" }]

[build-system]
requires = ["setuptools", "wheel", "mypy[mypyc]", "tomli>=2.0.0; python_version < '3.11'", "types-requests"]
build-backend = "setuptools.build_meta"

[tool.poetry.scripts]
yearn-treasury = "yearn_treasury.balances:export"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
eth-portfolio-temp = ">=0.0.1,<0.1"

[tool.poetry.group.dev.dependencies]
mypy = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
types-requests = "*"

[tool.mypy]
exclude = ["build/","cache/","env/", "tests/", "setup.py"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hypothesis
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | cache
  | dist
  | env
)/
'''